Change image fit to fill to avoid cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,7 +467,7 @@ img, video {
 .service-img-wrapper img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     filter: grayscale(20%);
     transition: filter 0.3s;
 }
